# dev-browser

./: CHANGELOG.md  CHEATSHEET.md  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
.github/workflows/: release.yml
cli/: Cargo.toml  llm-guide.txt
cli/src/: daemon.rs  main.rs
daemon/: package.json  pnpm-lock.yaml
daemon/src/: agent-manager.ts  audit-manager.ts  auth-flow-manager.test.ts  auth-flow-manager.ts  browser-manager.ts  cookie-manager.ts  daemon.ts  error-collector.ts  form-manager.ts  fuzzing-manager.ts  network-manager.ts  protocol.ts  recording-manager.ts  security-manager.ts  session-manager.ts  visual-diff-manager.ts
daemon/src/sandbox/: quickjs-sandbox.ts
daemon/src/sandbox/forked-client/src/utils/isomorphic/: locatorParser.test.ts  locatorParser.ts
scripts/: install-claude.sh  install-codex.sh  install-dev.sh
skills/dev-browser/: SKILL.md
test/: nipez-login.js
