[package]
name = "dev-browser"
version = "0.2.4"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"
dialoguer = "0.12"
interprocess = "2.2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
